# dcs-gfx-render-sw

./: .travis.yml  CMakeLists.txt  README.rst
inc/hugh/render/software/: attribute.hpp  context.hpp  fragment.hpp  line.hpp  pipelines.hpp  primitive.hpp  primitives.hpp  triangle.hpp  vertex.hpp
inc/hugh/render/software/buffer/: base.hpp  color.hpp  depth.hpp
inc/hugh/render/software/buffer/depth/: base.hpp
inc/hugh/render/software/buffer/frame/: base.hpp
inc/hugh/render/software/pipeline/: base.hpp  fixed.hpp
inc/hugh/render/software/pipeline/fixed/: base.hpp  direct3d.hpp  opengl.hpp
inc/hugh/render/software/pipeline/flexible/: base.hpp  direct3d.hpp  opengl.hpp
inc/hugh/render/software/primitive/: base.hpp  line_list.hpp  line_strip.hpp  lines.hpp  point_list.hpp  points.hpp  triangle_list.hpp  triangle_strip.hpp  triangles.hpp
inc/hugh/render/software/rasterizer/: base.hpp  simple.hpp
share/doc/hugh/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/common/: CMakeLists.txt  pipeline.cpp  pipeline.hpp
src/app/pipeline_fixed/: CMakeLists.txt  main.cpp  window_buffer.cpp  window_buffer.hpp  window_control.cpp  window_control.hpp
src/app/pipeline_fixed/gtkmm_wrap/: CMakeLists.txt  application.cpp  application.hpp  check_button_input.cpp  check_button_input.hpp  check_button_input.inl  radio_button_input.cpp  radio_button_input.hpp  radio_button_input.inl  text_input.cpp  text_input.inl  text_output.cpp  text_output.hpp  text_output.inl  utilities.cpp  utilities.hpp  utilities.inl  window.cpp  window.hpp
src/app/projection/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/render/: CMakeLists.txt
src/lib/render/software/: CMakeLists.txt  README.rst  attribute.cpp  context.cpp  fragment.cpp  line.cpp  primitive.cpp  triangle.cpp  vertex.cpp
src/lib/render/software/buffer/: base.cpp  color.cpp  depth.cpp
src/lib/render/software/buffer/depth/: base.cpp
src/lib/render/software/buffer/frame/: base.cpp
src/lib/render/software/pipeline/: base.cpp  fixed.cpp
src/lib/render/software/pipeline/fixed/: base.cpp  direct3d.cpp  opengl.cpp
src/lib/render/software/pipeline/flexible/: base.cpp  direct3d.cpp  opengl.cpp
src/lib/render/software/primitive/: base.cpp  line_list.cpp  line_strip.cpp  lines.cpp  point_list.cpp  points.cpp  triangle_list.cpp  triangle_strip.cpp  triangles.cpp
src/lib/render/software/rasterizer/: base.cpp  simple.cpp
src/lib/render/software/test/: CMakeLists.txt  attribute.cpp  context.cpp  fragment.cpp  line.cpp  pipeline_fixed.cpp  pipeline_fixed_direct3d.cpp  pipeline_fixed_opengl.cpp  pipeline_fixed_shared.cpp  pipeline_fixed_shared.hpp  primitive.cpp  primitive_line_list.cpp  primitive_line_strip.cpp  primitive_lines.cpp  primitive_point_list.cpp  primitive_points.cpp  primitive_triangle_list.cpp  primitive_triangle_strip.cpp  primitive_triangles.cpp  rasterizer_simple.cpp  triangle.cpp
